--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -37,7 +37,6 @@
         @media screen and (min-width: 1024px){
           display:inline-block;
           width: 33%;
-          color:white;
 
         }
       }
